--- a/assignment_001.ipynb
+++ b/assignment_001.ipynb
@@ -9,6 +9,7 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "import numpy as np\n",
+    "np.random.seed(123) # 결과 재현을 위해 시드를 설정합니다.\n",
     "\n",
     "# 데이터셋 불러옵니다.\n",
     "fashion_mnist = keras.datasets.fashion_mnist\n",
@@ -19,7 +20,7 @@
     "훈련 이미지와 훈련 라벨을 이용하여 모델을 학습시키고, \n",
     "학습된 모델에 시험 이미지를 입력하여 출력되는 라벨을 제출하시면 됩니다.\n",
     "제출 파일 형식은 시험 이미지가 10,000개이므로 10,000개의 행에 한 가지의 라벨 숫자로 기록된 파일입니다.\n",
-    "만약 모두 라벨이 0으로 출력된 결과를 파일로 저장한다면 아래와 같이 파일로 저장할 수 있습니다.\n",
+    "만약 모든 라벨이 0으로 출력된 결과를 파일로 저장한다면 아래와 같이 파일로 저장할 수 있습니다.\n",
     "'''\n",
     "\n",
     "predict_labels = np.zeros(10000)\n",
