--- a/cuk_puk_ch2.ipynb
+++ b/cuk_puk_ch2.ipynb
@@ -15,6 +15,16 @@
     }
   },
   "cells": [
+        {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aifactory-team/AFClass/blob/master/cuk_puk_ch2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
