--- a/khucapstonedesign/collaborative_filtering_aftask.ipynb
+++ b/khucapstonedesign/collaborative_filtering_aftask.ipynb
@@ -1011,7 +1011,7 @@
         "gt = gt.to_numpy().astype(float).reshape(-1)\n",
         "pr = pr.to_numpy().astype(float).reshape(-1)\n",
         "\n",
-        "score = mean_squared_error(gt, pr, squared=True)\n",
+        "score = mean_squared_error(gt, pr, squared=Flase)\n",
         "print(\"score:\", score)"
       ],
       "execution_count": 120,
@@ -1019,7 +1019,7 @@
         {
           "output_type": "stream",
           "text": [
-            "score: 6.456479056825324\n"
+            "score: 2.456479056825324\n"
           ],
           "name": "stdout"
         }
