--- a/aifactory/sign_language_minst_classification_by_hand.ipynb
+++ b/aifactory/sign_language_minst_classification_by_hand.ipynb
@@ -33,7 +33,7 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "dataset = np.load('sing_mnist.npz')\n",
+        "dataset = np.load('sign_mnist.npz')\n",
         "x_train, y_train = dataset['x_train'], dataset['y_train']\n",
         "x_test, y_test = dataset['x_test'], dataset['y_test']"
       ],
