--- a/aifactory/mlp_house_price_prediction.ipynb
+++ b/aifactory/mlp_house_price_prediction.ipynb
@@ -322,7 +322,7 @@
         "\n",
         "    # 모델 학습\n",
         "    model = build_model()\n",
-        "    history = model.fit(partial_x_train, partial_y_train, validation_data=(x_val, y_val), epochs=num_epochs, batch_size=1, verbose=0)\n",
+        "    history = model.fit(partial_x_train, partial_y_train, validation_data=(x_val, y_val), epochs=num_epochs, batch_size=16)\n",
         "    \n",
         "    mae_history = history.history['val_mae']\n",
         "    all_mae_histories.append(mae_history)\n",
