--- a/aifactory/cnn_fashion_mnist_classification.ipynb
+++ b/aifactory/cnn_fashion_mnist_classification.ipynb
@@ -44,6 +44,8 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "from PIL import Image\n",        
+        "import urllib\n",
         "\n",
         "from tensorflow.keras.models import Sequential, load_model\n",
         "from tensorflow.keras.layers import Dense, Conv2D, MaxPooling2D, Flatten\n",
