--- a/aifactory/sign_language_minst_classification_by_hand.ipynb
+++ b/aifactory/sign_language_minst_classification_by_hand.ipynb
@@ -22,7 +22,13 @@
         "id": "uZaXoKcPrkIh"
       },
       "source": [
-        "알파벳 수화 이미지 데이터셋 불러옵니다."
+        "알파벳 수화에 대해 배워봅시다. 사전 지식이 없다고 가정할 때, 사람은 어떻게 배우는 지, 그리고 학습한 것을 어떻게 평가할 것인지도 알아봅니다. \n",
+        "\n",
+        "먼저 알파벳 수화 이미지 데이터셋을 아래 페이지에서 다운로드 받습니다. \n",
+        "\n",
+        "http://aifactory.space/aifactory/taskData/detail.do?task.taskId=T002001\n",
+        "\n",
+        "그 다음 다운로드 받은 파일을 구글 코랩 서버에 업로드한 뒤 불러옵니다."
       ]
     },
     {
@@ -56,7 +62,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q2L0gn2iHoPa",
-        "outputId": "958a7134-6933-4e85-dafa-ea5d3f73853f"
+        "outputId": "c50b7b20-356a-452f-f5cc-e654a2c0642c"
       },
       "source": [
         "print(x_train.shape)\n",
@@ -108,7 +114,7 @@
         "    ax.set_title(str(i) + ': ?')\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -145,7 +151,7 @@
         "\n",
         "np.savetxt('y_pred.csv', y_pred, fmt='%c')"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -179,7 +185,7 @@
         "    ax.set_title(title)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -212,7 +218,7 @@
           "height": 98
         },
         "id": "PtB_GwjTU1Xl",
-        "outputId": "33dcd658-298c-4f3c-e0cd-850656546c24"
+        "outputId": "ca2d0b8f-d5be-4eb7-db26-50005a4ef6e8"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -225,7 +231,7 @@
         "    ax.set_title(str(i) + ': ?')\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -249,11 +255,11 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "y_pred = ['g', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a']\n",
+        "y_pred = ['g', 'a', 'a', 'a', 'd', 'a', 'a', 'o', 'd', 'a']\n",
         "\n",
         "np.savetxt('y_pred.csv', y_pred, fmt='%c')"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     }
   ]
