--- a/aifactory/rnn_movie_review_sentiment_classification.ipynb
+++ b/aifactory/rnn_movie_review_sentiment_classification.ipynb
@@ -32,7 +32,11 @@
         "id": "NwJWKTGtWxcp"
       },
       "source": [
-        "문장을 입력해서 이진분류하는 모델에 대해서 알아보겠습니다. 언어가 시계열적인 의미가 있으므로, 이 언어를 문자로 표현한 문장도 시계열적인 의미가 있습니다. 모델에 입력하기 위해서 문장을 시계열수치로 인코딩하는 방법과 여러가지 이진분류 모델을 구성해보고, 학습 결과를 살펴보겠습니다. 이 모델들은 문장 혹은 시계열수치로 양성/음성을 분류하거나 이벤트 발생 유무를 감지하는 문제를 풀 수 있습니다. "
+        "문장을 입력해서 이진분류하는 모델에 대해서 알아보겠습니다. 언어가 시계열적인 의미가 있으므로, 이 언어를 문자로 표현한 문장도 시계열적인 의미가 있습니다. \n",
+        "\n",
+        "모델에 입력하기 위해서 문장을 시계열수치로 인코딩하는 방법과 이진분류 모델을 구성해보고, 학습 결과를 살펴보겠습니다.\n",
+        "\n",
+        "이 모델들은 문장 혹은 시계열수치로 양성/음성을 분류하거나 이벤트 발생 유무를 감지하는 문제를 풀 수 있습니다. "
       ]
     },
     {
@@ -58,7 +62,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +73,13 @@
       "source": [
         "### 데이터셋 준비\n",
         "\n",
-        "IMDB에서 제공하는 영화 리뷰 데이터셋을 이용하겠습니다. 이 데이터셋은 훈련셋 25,000개, 시험셋 25,000개의 샘플을 제공합니다. 라벨은 1과 0으로 좋아요/싫어요로 지정되어 있습니다. 케라스에서 제공하는 imdb의 load_data() 함수을 이용하면 데이터셋을 쉽게 얻을 수 있습니다. 데이터셋은 이미 정수로 인코딩되어 있으며, 정수값은 단어의 빈도수를 나타냅니다. 모든 단어를 고려할 수 없으므로 빈도수가 높은 단어를 위주로 데이터셋을 생성합니다. 20,000번째로 많이 사용하는 단어까지만 데이터셋으로 만들고 싶다면, num_words 인자에 20000이라고 지정하면 됩니다. "
+        "IMDB에서 제공하는 영화 리뷰 데이터셋을 이용하겠습니다. 이 데이터셋은 훈련셋 25,000개, 시험셋 25,000개의 샘플을 제공합니다. 라벨은 1과 0으로 좋아요/싫어요로 지정되어 있습니다. \n",
+        "\n",
+        "케라스에서 제공하는 imdb의 load_data() 함수을 이용하면 데이터셋을 쉽게 얻을 수 있습니다. \n",
+        "\n",
+        "데이터셋은 이미 정수로 인코딩되어 있으며, 정수값은 단어의 빈도수를 나타냅니다. 모든 단어를 고려할 수 없으므로 빈도수가 높은 단어를 위주로 데이터셋을 생성합니다. \n",
+        "\n",
+        "20,000번째로 많이 사용하는 단어까지만 데이터셋으로 만들고 싶다면, num_words 인자에 20000이라고 지정하면 됩니다. "
       ]
     },
     {
@@ -85,7 +95,7 @@
       "source": [
         "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=20000)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +130,7 @@
       "source": [
         "print(x_test)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +171,7 @@
         "print(x_test.shape)\n",
         "print(y_test.shape)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +221,7 @@
         "x_train = sequence.pad_sequences(x_train, maxlen=200)\n",
         "x_test = sequence.pad_sequences(x_test, maxlen=200)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +258,7 @@
         "model.add(Dense(256, activation='relu'))\n",
         "model.add(Dense(1, activation='sigmoid'))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,7 +290,7 @@
         "                 validation_split=0.2, \n",
         "                 callbacks=[checkpoint_callback])"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +352,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -384,7 +394,7 @@
         "print('## evaluation loss and_metrics ##')\n",
         "print(loss_and_metrics)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +429,7 @@
         "model.add(LSTM(128))\n",
         "model.add(Dense(1, activation='sigmoid'))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +461,7 @@
         "                 validation_split=0.2, \n",
         "                 callbacks=[checkpoint_callback])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +526,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -556,7 +566,7 @@
         "print('## evaluation loss and_metrics ##')\n",
         "print(loss_and_metrics)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +597,7 @@
         "y_pred = (model.predict(x_test) > 0.5).astype(\"int32\")\n",
         "np.savetxt('y_pred.csv', y_pred, fmt='%d')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     }
   ]
