--- a/aifactory/rnn_movie_review_sentiment_classification.ipynb
+++ b/aifactory/rnn_movie_review_sentiment_classification.ipynb
@@ -54,13 +54,15 @@
         "id": "jTzceDpWZm8h"
       },
       "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "\n",
         "from tensorflow.keras.models import Sequential, load_model\n",
         "from tensorflow.keras.layers import Dense, Embedding, LSTM, Flatten\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint\n",
         "from tensorflow.keras.utils import plot_model\n",
-        "from tensorflow.keras.datasets import imdb\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np"
+        "from tensorflow.keras.datasets import imdb"
       ],
       "execution_count": null,
       "outputs": []
