--- a/aifactory/sign_language_minst_classification.ipynb
+++ b/aifactory/sign_language_minst_classification.ipynb
@@ -68,9 +68,9 @@
         "id": "hRfuOMk0n7Uw"
       },
       "source": [
-        "먼저 알파벳 수화 이미지 데이터셋을 아래 페이지에서 다운로드 받습니다. \n",
+        "먼저 알파벳 수화 이미지 데이터셋을 아래 링크에서 다운로드 받습니다. \n",
         "\n",
-        "http://aifactory.space/aifactory/taskData/detail.do?task.taskId=T002057\n",
+        "https://github.com/aifactory-team/AFClass/raw/master/aifactory/warehouse/sign_mnist.npz\n",
         "\n",
         "그 다음 다운로드 받은 파일을 구글 코랩 서버에 업로드한 뒤 불러옵니다."
       ]
