--- a/aifactory/sign_language_minst_classification_by_hand.ipynb
+++ b/aifactory/sign_language_minst_classification_by_hand.ipynb
@@ -24,9 +24,9 @@
       "source": [
         "알파벳 수화에 대해 배워봅시다. 사전 지식이 없다고 가정할 때, 사람은 어떻게 배우는 지, 그리고 학습한 것을 어떻게 평가할 것인지도 알아봅니다. \n",
         "\n",
-        "먼저 알파벳 수화 이미지 데이터셋을 아래 페이지에서 다운로드 받습니다. \n",
+        "먼저 알파벳 수화 이미지 데이터셋을 아래 링크에서 다운로드 받습니다. \n",
         "\n",
-        "http://aifactory.space/aifactory/taskData/detail.do?task.taskId=T002001\n",
+        "https://github.com/aifactory-team/AFClass/raw/master/aifactory/warehouse/sign_mnist.npz\n",
         "\n",
         "그 다음 다운로드 받은 파일을 구글 코랩 서버에 업로드한 뒤 불러옵니다."
       ]
